# 0xpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/agent/: loop.py  prompts.py  schemas.py
app/api/: middleware.py  routes.py
app/clients/: alchemy.py  coingecko.py  dexscreener.py  goplus.py  oxbrain.py  zerion.py
app/observability/: logger.py  metrics.py
app/tools/: __init__.py  base.py  knowledge.py  market.py  market_history.py  onchain.py  registry.py  security.py  wallet.py
frontend/: index.html
tests/: test_agent_loop.py  test_health.py  test_logging.py  test_metrics.py  test_streaming.py
tests/test_tools/: test_clients.py  test_knowledge.py  test_market.py  test_market_history.py  test_onchain.py  test_registry.py  test_security.py  test_wallet.py
